--- a/functions/submission-created/package.json
+++ b/functions/submission-created/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "firebase": "^5.3.1",
+    "dotenv": "^6.0.0",
+    "firebase": "^5.3.1"
   },
   "author": "Divya Sasidharan",
   "license": "MIT"
