--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf functions-build && mkdir functions-build",
-    "prezip": "cd functions/submission-created && yarn",
-    "zip": "zip -r submission-created.zip *",
+    "zip": "cd functions/submission-created && yarn install && zip -r submission-created.zip *",
     "postzip": "mv functions/submission-created/submission-created.zip functions-build",
+    "move-other-func": "cp functions/another-func.js functions-build",
     "runFunc": "netlify-lambda serve functions",
     "buildFunc": "netlify-lambda build functions",
     "serve": "vue-cli-service serve",
-    "prebuild": "npm run clean && npm run zip",
+    "prebuild": "npm run clean && npm run zip && npm run move-other-func",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
