--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "netlify-lambda": "^0.4.0",
+    "node-sass": "^4.9.3",
     "path": "^0.12.7",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
